[gd_scene load_steps=19 format=3 uid="uid://cd2lhpat71u1q"]

[ext_resource type="Script" path="res://Scripts/Skills/alex_skill_4_area.gd" id="1_a41ry"]
[ext_resource type="Texture2D" uid="uid://b47y3ot4ncn0i" path="res://Assets/Images/Effects/AlexSkill4/0001.png" id="3_o5fn2"]
[ext_resource type="Texture2D" uid="uid://h6gk6x620gep" path="res://Assets/Images/Effects/AlexSkill4/0002.png" id="4_g6jvo"]
[ext_resource type="Texture2D" uid="uid://b2t6w18d42eto" path="res://Assets/Images/Effects/AlexSkill4/0003.png" id="5_t4371"]
[ext_resource type="Texture2D" uid="uid://5j24qagqqnk4" path="res://Assets/Images/Effects/AlexSkill4/0004.png" id="6_u41sr"]
[ext_resource type="Texture2D" uid="uid://dqh7dflej1jmb" path="res://Assets/Images/Effects/AlexSkill4/0005.png" id="7_nwu4g"]
[ext_resource type="Texture2D" uid="uid://c1kghc5ywg757" path="res://Assets/Images/Effects/AlexSkill4/0006.png" id="8_rlhrf"]
[ext_resource type="Texture2D" uid="uid://c1mheuykvq2nv" path="res://Assets/Images/Effects/AlexSkill4/0007.png" id="9_tt02a"]
[ext_resource type="Texture2D" uid="uid://bdfs7cmwo3cyp" path="res://Assets/Images/Effects/AlexSkill4/0008.png" id="10_g3r8w"]
[ext_resource type="Texture2D" uid="uid://46g4mkr7p3a8" path="res://Assets/Images/Effects/AlexSkill4/0009.png" id="11_k1d2r"]
[ext_resource type="Texture2D" uid="uid://cmwqekox3iw0v" path="res://Assets/Images/Effects/AlexSkill4/0010.png" id="12_5ybnh"]
[ext_resource type="Texture2D" uid="uid://bn3wkt82qug3x" path="res://Assets/Images/Effects/AlexSkill4/0011.png" id="13_08ff1"]
[ext_resource type="Texture2D" uid="uid://1kdugdg6jogr" path="res://Assets/Images/Effects/AlexSkill4/0012.png" id="14_tmjfu"]
[ext_resource type="Texture2D" uid="uid://bh48a0yv4j7" path="res://Assets/Images/Effects/AlexSkill4/0013.png" id="15_22rj0"]
[ext_resource type="AudioStream" uid="uid://csuw2h1ql0whd" path="res://Assets/Sounds/FXs/Heroes/Alex/破土.wav" id="16_7nxds"]
[ext_resource type="Texture2D" uid="uid://bp4mm2qr04sfd" path="res://Assets/Images/Skills/Firerain/shadow.png" id="16_e23tx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lnaf7"]
radius = 73.9444

[sub_resource type="SpriteFrames" id="SpriteFrames_4ukyh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_o5fn2")
}, {
"duration": 1.0,
"texture": ExtResource("4_g6jvo")
}, {
"duration": 1.0,
"texture": ExtResource("5_t4371")
}, {
"duration": 1.0,
"texture": ExtResource("6_u41sr")
}, {
"duration": 1.0,
"texture": ExtResource("7_nwu4g")
}, {
"duration": 1.0,
"texture": ExtResource("8_rlhrf")
}, {
"duration": 1.0,
"texture": ExtResource("9_tt02a")
}, {
"duration": 1.0,
"texture": ExtResource("10_g3r8w")
}, {
"duration": 1.0,
"texture": ExtResource("11_k1d2r")
}, {
"duration": 1.0,
"texture": ExtResource("12_5ybnh")
}, {
"duration": 1.0,
"texture": ExtResource("13_08ff1")
}, {
"duration": 1.0,
"texture": ExtResource("14_tmjfu")
}, {
"duration": 1.0,
"texture": ExtResource("15_22rj0")
}],
"loop": false,
"name": &"default",
"speed": 24.0
}]

[node name="AlexSkill4Area" type="Area2D"]
scale = Vector2(0.3, 0.3)
collision_layer = 0
collision_mask = 32
script = ExtResource("1_a41ry")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1, 0.7)
shape = SubResource("CircleShape2D_lnaf7")
debug_color = Color(0, 1, 1, 0.137255)

[node name="ForkSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(2.5, 7.5)
scale = Vector2(1.77973, 1.77973)
sprite_frames = SubResource("SpriteFrames_4ukyh")
autoplay = "default"
frame = 12
frame_progress = 1.0
offset = Vector2(-5, -20)

[node name="SkillAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_7nxds")
volume_db = 10.0
bus = &"Sound"

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="DurationTimer" type="Timer" parent="."]
one_shot = true

[node name="Shadow" type="Sprite2D" parent="."]
z_index = -1
scale = Vector2(3.62618, 3.62618)
texture = ExtResource("16_e23tx")

[node name="InPathArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="InPathArea"]
scale = Vector2(0.525, 0.368)
shape = SubResource("CircleShape2D_lnaf7")
debug_color = Color(0, 1, 1, 0.137255)

[connection signal="timeout" from="ShotTimer" to="." method="_on_shot_timer_timeout"]
[connection signal="timeout" from="DurationTimer" to="." method="_on_duration_timer_timeout"]
